--- a/src/pages/Products/Products.css
+++ b/src/pages/Products/Products.css
@@ -20,7 +20,7 @@
 }
 
 .left-section.flex button {
-  background-color:#e35b3d;
+  background-color:#9b51e0;
   width: 8rem;
   padding: 0.75rem 0;
   text-align: center;
@@ -41,7 +41,7 @@
   font-weight: bold;
   letter-spacing: 0.6px;
   padding: 0.8rem 0;
-  border: 1px solid #e64a19;
+  border: 1px solid #914cd2;
 }
 
 .light main section.left-section.flex button.active {
